# BirdOS

./: .gitignore  LICENSE  LICENSE-MIT  Makefile  README.md  compile.bat  setup.bat  setup.sh
docs/: SETUP.md
docs/pl-PL/: LICENSE  README.md  SETUP.md
kernel/: Cargo.toml  Makefile  README.md
kernel/.cargo/: config.toml
kernel/builder/: Cargo.toml
kernel/builder/src/: main.rs
kernel/docs/pl-PL/: README.md
kernel/src/: main.rs
