[package]
name = "kernel"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["builder"]

[dependencies]
bootloader = {path = "../bootloader", version = "0.10.1" }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


